--- a/Lottie-Animation-Preview/package.json
+++ b/Lottie-Animation-Preview/package.json
@@ -15,6 +15,9 @@
     "contentful-cli": "0.33.2",
     "eslint": "^6.0.1"
   },
+  "alias": {
+    "lottie-web": "./cdn_modules/lottie-web-cdn"
+  },
   "scripts": {
     "start": "contentful-extension-scripts start",
     "build": "contentful-extension-scripts build",
